implementing the friendship system, starting to addopt the app factory pattern
